--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -7,3 +7,24 @@ security.service-token.header=${SERVICE_TOKEN_NAME}
 #Urls
 url.plane-service=${PLANE_SERVICE_URL}
 url.identity-service=${IDENTITY_SERVICE_URL}
+#Mappings
+mapping.auth.login=/api/auth/login
+mapping.auth.register=/api/auth/register
+mapping.airport.getAll=/api/airport/getAll
+mapping.airport.get=/api/airport/get
+mapping.airport.create=/api/airport/create
+mapping.airport.update=/api/airport/update
+mapping.airport.delete=/api/airport/delete
+mapping.plane.getAll=/api/plane/getAll
+mapping.plane.get=/api/plane/get
+mapping.plane.create=/api/plane/create
+mapping.plane.update=/api/plane/update
+mapping.plane.delete=/api/plane/delete
+mapping.dispatcher.getAll=/api/dispatcher/getAll
+mapping.dispatcher.get=/api/dispatcher/get
+mapping.dispatcher.update=/api/dispatcher/update
+mapping.flights.getAll=/api/flights/getAll
+mapping.flights.get=/api/flights/get
+mapping.flights.create=/api/flights/create
+mapping.time.get=/api/time/get
+mapping.time.skip=/api/time/skip
